[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui-theme.tres" type="Theme" id=1]
[ext_resource path="res://src/gui/global_levels_screens/game_over_screen/game_over_screen.gd" type="Script" id=2]

[node name="GameOverScreen" type="CanvasLayer"]
process_mode = 2
script = ExtResource( 2 )

[node name="Hidable" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Hidable"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
color = Color( 0.25098, 0.0901961, 0.494118, 0.717647 )

[node name="VBoxOptions" type="VBoxContainer" parent="Hidable"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -116.0
offset_right = 134.0
offset_bottom = 120.0
custom_constants/separation = 20
alignment = 1

[node name="RestartLevel" type="Button" parent="Hidable/VBoxOptions"]
offset_top = 74.0
offset_right = 264.0
offset_bottom = 108.0
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../MainMenu")
focus_next = NodePath("../MainMenu")
focus_previous = NodePath("../MainMenu")
text = "Restart Level"

[node name="MainMenu" type="Button" parent="Hidable/VBoxOptions"]
offset_top = 128.0
offset_right = 264.0
offset_bottom = 162.0
focus_neighbor_top = NodePath("../RestartLevel")
focus_neighbor_bottom = NodePath("../RestartLevel")
focus_next = NodePath("../RestartLevel")
focus_previous = NodePath("../RestartLevel")
text = "Main Menu"

[node name="Label" type="Label" parent="Hidable"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.5
offset_top = 140.0
offset_right = 244.5
offset_bottom = 211.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.788235, 0.788235, 0.788235, 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Hidable/VBoxOptions/RestartLevel" to="." method="_on_RestartLevel_pressed"]
[connection signal="pressed" from="Hidable/VBoxOptions/MainMenu" to="." method="_on_MainMenu_pressed"]
